<resources>
    <string name="app_name">LATAM Quiz</string>
    <string name="quiz_time">Quiz Time</string>
    <string name="comenzar">Start</string>
    <string name="bienvenido">Welcome</string>
    <string name="introduce_tu_nombre">Please enter your name:</string>
    <string name="nombre">Name</string>
    <string name="resultado">Result</string>
    <string name="congrats">Congratulations!</string>
    <string name="user">User</string>
    <string name="score">Your score was 9 / 10</string>
    <string name="finish">Finish</string>
    <string name="_0_10">0/10</string>
    <string name="Send">Send</string>
    <string name="flag">Flag</string>
</resources>