<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="#363A43"
            android:textSize="22sp"
            tools:text="Which country owns this flag?"/>

        <ImageView
            android:id="@+id/ivFlag"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/argentina"
            android:contentDescription="@string/flag" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llProgress"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false"/>

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:gravity="center"
                android:textColorHint="#7A8089"
                android:textSize="14sp"
                android:text="@string/_0_10"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tvOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_options"
            android:padding="15dp"
            android:gravity="center"
            android:textColorHint="#7A8089"
            android:textSize="18sp"
            tools:text="Argentina"/>
        <TextView
            android:id="@+id/tvOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_options"
            android:padding="15dp"
            android:gravity="center"
            android:textColorHint="#7A8089"
            android:textSize="18sp"
            tools:text="Uruguay"/>
        <TextView
            android:id="@+id/tvOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_options"
            android:padding="15dp"
            android:gravity="center"
            android:textColorHint="#7A8089"
            android:textSize="18sp"
            tools:text="Paraguay"/>
        <TextView
            android:id="@+id/tvOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_options"
            android:padding="15dp"
            android:gravity="center"
            android:textColorHint="#7A8089"
            android:textSize="18sp"
            tools:text="Chile"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEnviar"
            android:layout_margin="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/Send"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>

</ScrollView>